# vc4ctl

./: Cargo.toml  LICENSE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yaml  pull-request.yaml
src/: main.rs
src/api/: get.rs  mod.rs  room_control.rs
src/api/config/: config.rs  mod.rs
src/api/get/: mod.rs
src/cli/: cli.rs  config.rs  get.rs  mod.rs  room_control.rs
src/cli/config/: mod.rs
src/utils/: constants.rs  http_client.rs  mod.rs  vc4_entities.rs
